--- a/webpack_practice/package.json
+++ b/webpack_practice/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "watch": "webpack --mode development --watch",
+    "watch": "webpack --mode development --watch --no-source-map --watch",
+    "sass": "sass src/scss:src/css/",
     "sass-ver": "sass --version"
   },
   "keywords": [],
