--- a/webpack_practice/package.json
+++ b/webpack_practice/package.json
@@ -15,12 +15,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "fibers": "^5.0.1",
     "mini-css-extract-plugin": "^2.6.0",
     "return": "^1.0.0",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
+    "svelte-preprocess": "^4.10.7",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
