--- a/webpack_practice/package.json
+++ b/webpack_practice/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "watch": "webpack --mode development --watch --no-source-map --watch",
+    "watch": "npx webpack --mode production --watch",
     "sass": "sass src/scss:src/css/",
     "sass-ver": "sass --version"
   },
@@ -26,6 +26,8 @@
     "style-loader": "^3.3.1",
     "svelte-preprocess": "^4.10.7",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-fix-style-only-entries": "^0.6.1",
+    "webpack-remove-empty-scripts": "^0.8.1"
   }
 }
